tests/cases/errors_typecheck/test1.stderr
TypeError unification failed: i32 != string at main[L3:12-L3:13]

2 |     let s = 10;
3 |     println(s);
3 |             ^
4 | }
