tests/cases/errors_typecheck/test1.qz
fun t() {
    let s = 10;
    println(s);
}

